Fix Trading Guide and Welcome layout issues, improve modal styling #114

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -213,6 +213,7 @@ a.close {
     z-index: 1000;
     max-width: 90%;
     border-radius: $BORDER_RADIUS;
+    overflow: auto;
     .drag-handle {
         cursor: pointer;
     }
